# ios-xr-switch-config-builder

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
src/: App.tsx  demoData.ts  main.tsx
src/components/: ChangeInputCard.tsx  CodeMirrorTextarea.tsx  ConfigEditorModal.tsx  LintStatusHeader.tsx  SimplifiedConfigCard.tsx
test/: access-mode-rejected.test.ts  bundle-interface-validation.test.ts  bvi-passthrough.test.ts  change-generation.test.ts  command-order.test.ts  description-required-existing.test.ts  description-required.test.ts  error-line-numbers.test.ts  interface-passthrough.test.ts  parse-and-analyze.test.ts  trunk-allowed-none.test.ts  vlan-addition-validation.test.ts  vlan-name-required.test.ts  vlan-range-syntax.test.ts  vlan-removal-validation.test.ts
wasm/: Cargo.toml
wasm/src/: semantics.rs
wasm/src/ast/: mod.rs  node.rs  span.rs
wasm/src/change/: codegen.rs  input_parser.rs  model.rs  planner.rs
wasm/src/parse/: mod.rs
web/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vitest.config.ts
web/src/: App.tsx  demoData.ts  main.tsx  ncs.ts
web/test/: access-mode-rejected.test.ts  change-generation.test.ts  config-passthrough.test.ts  description-optional-when-exists.test.ts  description-required-existing.test.ts  error-line-numbers.test.ts  helpers.ts  interface-passthrough.test.ts  interface-requires-statements.test.ts  interface-speed-mismatch.test.ts  parse-and-analyze.test.ts  trunk-allowed-none.test.ts  (+3 more)
(+35 files in other folders)
